# pitchlake-coprocessor

./: .gitignore  .tool-versions  CODEOWNERS  Cargo.toml  OnChain-Integration-Summary.md  PROOF_COMPOSITION_GUIDE.md  ProofCompositionOutput.md  QUICKSTART.md  README.md  Scarb.toml  profile_10.pb  profile_20.pb  profile_5.pb  profile_twap_unoptimized.pb  profile_volatility_fixed_point.pb
benchmark/: Cargo.toml
benchmark-risc0/: Cargo.toml  profile_minimize.pb  profile_minimize_2160_inputs.pb  profile_minimize_2160_inputs_10_iter.pb  profile_minimize_fixed.pb  profile_pre_minimize.pb  profile_reserve_price_floating.pb  profile_simulate_price_floating_2160_inputs_10_iter.pb
benchmark-risc0/add-twap-7d/: Cargo.toml
benchmark-risc0/add-twap-7d-error-bound-floating/: Cargo.toml  profile.pb
benchmark-risc0/add-twap-7d-error-bound-floating/core/: Cargo.toml
benchmark-risc0/add-twap-7d-error-bound-floating/methods/: Cargo.toml
benchmark-risc0/add-twap-7d-error-bound-floating/src/: main.rs
benchmark-risc0/add-twap-7d-floating/: Cargo.toml
benchmark-risc0/add-twap-7d-floating/methods/: Cargo.toml
benchmark-risc0/add-twap-7d-floating/src/: lib.rs  main.rs
benchmark-risc0/add-twap-7d/methods/: Cargo.toml
benchmark-risc0/add-twap-7d/src/: lib.rs  main.rs
benchmark-risc0/calculate-pt-pt1-error-bound-floating/: Cargo.toml  profile.pb
benchmark-risc0/calculate-pt-pt1-error-bound-floating/methods/: Cargo.toml
benchmark-risc0/calculate-pt-pt1-error-bound-floating/src/: lib.rs  main.rs
benchmark-risc0/calculate-reserve-price-from-simulated-log-prices-floating/: Cargo.toml
benchmark-risc0/calculate-reserve-price-from-simulated-log-prices-floating/core/: Cargo.toml
benchmark-risc0/calculate-reserve-price-from-simulated-log-prices-floating/methods/: Cargo.toml
benchmark-risc0/calculate-reserve-price-from-simulated-log-prices-floating/src/: lib.rs  main.rs
benchmark-risc0/calculate-simulated-log-prices-floating/: Cargo.toml
benchmark-risc0/calculate-simulated-log-prices-floating/core/: Cargo.toml
benchmark-risc0/calculate-simulated-log-prices-floating/methods/: Cargo.toml
benchmark-risc0/calculate-simulated-log-prices-floating/src/: lib.rs  main.rs
benchmark-risc0/calculate_pt_pt1_error_bound_floating/: Cargo.toml
benchmark-risc0/hashing-felts/: Cargo.toml  profile.pb
benchmark-risc0/hashing-felts/core/: Cargo.toml
benchmark-risc0/hashing-felts/methods/: Cargo.toml
benchmark-risc0/hashing-felts/src/: lib.rs  main.rs
benchmark-risc0/max-return-floating/: Cargo.toml  profile.pb
benchmark-risc0/max-return-floating/methods/: Cargo.toml
benchmark-risc0/max-return-floating/src/: lib.rs  main.rs
benchmark-risc0/mrjpdf-fixed/: Cargo.toml  profile_mrjpdf_fixed.pb
benchmark-risc0/mrjpdf-fixed/core/: Cargo.toml
benchmark-risc0/mrjpdf-fixed/methods/: Cargo.toml
benchmark-risc0/mrjpdf-fixed/src/: main.rs
benchmark-risc0/mrjpdf-floating/: Cargo.toml  profile_mrjpdf_floating.pb
benchmark-risc0/neg-log-fixed/: Cargo.toml  profile_neg_log_fixed.pb  profile_neg_log_fixed_1000.pb  profile_neg_log_fixed_500.pb
benchmark-risc0/neg-log-floating/: Cargo.toml  profile_neg_log_floating.pb  profile_neg_log_floating_1000.pb  profile_neg_log_floating_2160.pb
benchmark-risc0/proof-composition-twap-maxreturn-reserveprice-floating/: Cargo.toml  profile.pb
benchmark-risc0/proof-composition-twap-maxreturn-reserveprice-floating-hashing/: Cargo.toml
benchmark-risc0/remove-seasonality-error-bound-floating/: Cargo.toml  profile.pb
benchmark-risc0/remove-seasonality-floating/: Cargo.toml
benchmark-risc0/reserve-price-composition-verify-simulated-price-floating/: Cargo.toml
benchmark-risc0/reserve-price-floating/: Cargo.toml
benchmark-risc0/reserve-price-floating-composition/: Cargo.toml  profile_reserve_price_floating_composition.pb
benchmark-risc0/simulate-price-fixed/: Cargo.toml  README.md
benchmark-risc0/simulate-price-floating/: Cargo.toml
benchmark-risc0/simulate-price-verify-position-floating/: Cargo.toml  profile.pb
benchmark-risc0/simulate-price-verify-position-floating2/: Cargo.toml
benchmark-risc0/twap-error-bound-floating/: Cargo.toml
benchmark/src/: lib.rs  solution.rs
benchmark/src/fixed_point/: mod.rs  (+1 more)
common/: Cargo.toml
common/src/: lib.rs
data-gathering/: Cargo.toml  README.md  reserve_price_reserve_price_modified_1000_iter.csv  reserve_price_reserve_price_modified_100_iter.csv  reserve_price_reserve_price_modified_10_iter.csv  reserve_price_reserve_price_modified_10_iterations.csv  reserve_price_reserve_price_modified_1500_iter.csv  reserve_price_reserve_price_modified_2000_iter.csv  reserve_price_reserve_price_modified_2400_iter.csv  reserve_price_reserve_price_modified_3000_iter.csv  reserve_price_reserve_price_modified_500_iter.csv  reserve_price_reserve_price_original.csv
data-gathering/common/: Cargo.toml
data-gathering/reserve-price-modified/: Cargo.toml
data-gathering/reserve-price-original/: Cargo.toml
data-gathering/reserve-price-original-modifed/: Cargo.toml
host/: Cargo.toml
host/src/: main.rs
main/: Cargo.toml  README.md  profile_100.pb  profile_30.pb  profile_50.pb
main/host/: Cargo.toml
main/methods-twap/: Cargo.toml  profile_twap_fixed_point.pb  profile_twap_gas_fee.pb
mains/add-twap-7d-error-bound-floating/: Cargo.toml
mains/calculate-pt-pt1-error-bound-floating/: Cargo.toml
mains/max-return-floating/: Cargo.toml  profile.pb
mains/mock-proof-composition/: Cargo.toml
risc0-methods/: Cargo.toml
risc0-methods/add-twap-7d-error-bound-floating/: Cargo.toml
risc0-methods/calculate-pt-pt1-error-bound-floating/: Cargo.toml  profile.pb
risc0-methods/hashing-felts/: Cargo.toml
risc0-methods/max-return-floating/: Cargo.toml
risc0-methods/mock-proof-composition/: Cargo.toml
risc0-methods/proof-composition-twap-maxreturn-reserveprice-floating-hashing/: Cargo.toml  profile.pb
risc0-methods/remove-seasonality-error-bound-floating/: Cargo.toml
risc0-methods/simulate-price-verify-position-floating/: Cargo.toml
risc0-methods/twap-error-bound-floating/: Cargo.toml  profile.pb
(+291 files in other folders)
