[workspace]
resolver = "2"
members = [
    "benchmark",
    "core",
    "host",
    "methods",
    "methods-volatility",
    "methods-reserve-price",
    "methods-twap",
    "db-access",
    "db-models",
    "benchmark-risc0/mrjpdf-floating", "benchmark-risc0/mrjpdf-fixed",
]

[workspace.package]
edition = "2021"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
