[workspace]
resolver = "2"
members = ["mrjpdf-fixed", "mrjpdf-floating", "neg-log-fixed", "neg-log-floating", "remove-seasonality-floating", "reserve-price-floating-composition"]

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
