[workspace]
resolver = "2"
members = [
    "add-twap-7d-error-bound-floating",
    "add-twap-7d-floating",
    "calculate-reserve-price-from-simulated-log-prices-floating",
    "calculate-simulated-log-prices-floating",
    "calculate-pt-pt1-error-bound-floating",
    "mrjpdf-fixed",
    "mrjpdf-floating",
    "neg-log-fixed",
    "neg-log-floating",
    "remove-seasonality-error-bound-floating",
    "remove-seasonality-floating",
    "reserve-price-composition-verify-simulated-price-floating",
    "reserve-price-floating",
    "reserve-price-floating-composition",
    "simulate-price-fixed",
    "simulate-price-floating",
    "simulate-price-verify-position-floating",
    "twap-error-bound-floating",
    "max-return-floating",
    "proof-composition-twap-maxreturn-reserveprice-floating",
]

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
