[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.2"
# nalgebra = { path = "../../nalgebra" }
fixed = { version = "1.28.0", features = ["serde"] }
num-traits = "0.2.19"
simba = { version = "0.9.0", features = [
    "partial_fixed_point_support",
    "serde_serialize",
] }
