[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6"
nalgebra = "0.33.2"
fixed = { version = "1.28.0", features = ["serde"] }
num-traits = "0.2.19"
simba = { version = "0.9.0", features = [
    "partial_fixed_point_support",
    "serde_serialize",
] }
approx = { version = "0.5", default-features = false }

# for reserve price simulation
lstsq = "0.6.0"
statrs = { version = "0.17", default-features = false }
rand = "0.8.5"
rand_distr = "0.4.3"
# optimization = { git = "https://github.com/piwonskp/optimization-rust" }
# optimization = { path = "../../optimization-rust" }