[workspace]
resolver = "2"
members = ["common", "reserve-price-modified", "reserve-price-original"]

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
polars = { version = "0.43", features = [
    "lazy",
    "dynamic_group_by",
    "rolling_window",
    "ndarray",
] }
