[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
methods-volatility = { path = "../methods-volatility" }
methods-twap = { path = "../methods-twap" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
db-access = { path = "../db-access" }
tokio = "1.41.0"
eth-rlp-types = { git = "https://github.com/piwonskp/eth-rlp-verify.git" }
sqlx = "0.8.2"
dotenv = "0.15.0"
eyre = "0.6"
core = { path = "../core" }
fixed = "1.28.0"
num-traits = "0.2.19"
simba = { version = "0.9.0", features = ["partial_fixed_point_support", "serde_serialize"] }
