[workspace]
resolver = "2"
members = [
    "add-twap-7d-error-bound-floating",
    "calculate-pt-pt1-error-bound-floating",
    "remove-seasonality-error-bound-floating",
    "simulate-price-verify-position-floating",
    "twap-error-bound-floating",
    "max-return-floating",
    "proof-composition-twap-maxreturn-reserveprice-floating-hashing",
    "hashing-felts",
    "mock-proof-composition",
]

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
