[package]
name = "add-twap-7d-floating"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
add-twap-7d-floating-methods = { path = "methods" }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
benchmark = { path = "../../benchmark" }

tokio = "1.41.0"
eth-rlp-types = { git = "https://github.com/piwonskp/eth-rlp-verify.git" }
eyre = "0.6"
