[package]
name = "calculate-pt-pt1-error-bound-floating"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
calculate-pt-pt1-error-bound-floating-methods = { path = "methods" }
calculate-pt-pt1-error-bound-floating-core = { path = "core" }
benchmark = { path = "../../benchmark", features = ["original"] }