[package]
name = "calculate-reserve-price-from-simulated-log-prices-floating"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
calculate-reserve-price-from-simulated-log-prices-floating-core = { path = "core" }
calculate-reserve-price-from-simulated-log-prices-floating-methods = { path = "methods" }
benchmark = { path = "../../benchmark", features = ["original"] }
