[package]
name = "mrjpdf-fixed"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
mrjpdf-fixed-core = { path = "core" }
mrjpdf-fixed-methods = { path = "methods" }
# risc0-zkvm = { path = "../../risc0/zkvm" }
# rust_decimal = "1.29"

# [features]
# cuda = ["risc0-zkvm/cuda"]
# default = []
# prove = ["risc0-zkvm/prove"]
