[package]
name = "mrjpdf-fixed"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
mrjpdf-fixed-core = { path = "core" }
mrjpdf-fixed-methods = { path = "methods" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }

nalgebra = "0.33.2"
num-traits = "0.2.19"
simba = { version = "0.9.0", features = [
    "partial_fixed_point_support",
    "serde_serialize",
] }
