[package]
name = "mrjpdf-floating"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
mrjpdf-floating-core = { path = "core" }
mrjpdf-floating-methods = { path = "methods" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }

nalgebra = "0.33.2"
