[package]
name = "neg-log-fixed"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
neg-log-fixed-core = { path = "core" }
neg-log-fixed-methods = { path = "methods" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }

nalgebra = "0.33.2"
num-traits = "0.2.19"
simba = { version = "0.9.0", features = [
    "partial_fixed_point_support",
    "serde_serialize",
] }
benchmark = { path = "../../benchmark" }