[package]
name = "remove-seasonality-floating"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
remove-seasonality-floating-methods = { path = "methods" }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
benchmark = { path = "../../benchmark" }

eth-rlp-types = { git = "https://github.com/piwonskp/eth-rlp-verify.git" }
eyre = "0.6"