[package]
name = "reserve-price-floating-composition"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
remove-seasonality-floating = { path = "../remove-seasonality-floating" }
add-twap-7d-floating = { path = "../add-twap-7d-floating" }
reserve-price-floating = { path = "../reserve-price-floating" }
simulate-price-floating = { path = "../simulate-price-floating" }