[package]
name = "simulate-price-floating"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
simulate-price-floating-methods = { path = "methods" }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
benchmark = { path = "../../benchmark" }
eyre = "0.6"