[package]
name = "simulate-price-verify-position-floating"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "=1.2.2" }
simulate-price-verify-position-floating-methods = { path = "methods" }
simulate-price-verify-position-floating-core = { path = "core" }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
benchmark = { path = "../../benchmark" , features = ["original"]}
