[package]
name = "add-twap-7d-error-bound-floating"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm.workspace = true
add-twap-7d-error-bound-floating-methods = { path = "../../methods/add-twap-7d-error-bound-floating-methods" }
core = { path = "../../methods/core" }
common = { path = "../../common", features = ["original"] }