[package]
name = "calculate-pt-pt1-error-bound-floating"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm.workspace = true
calculate-pt-pt1-error-bound-floating-methods = { path = "../../methods/calculate-pt-pt1-error-bound-floating-methods" }
core = { path = "../../methods/core" }
common = { path = "../../common", features = ["original"] }