[package]
name = "mock-proof-composition"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true, default-features = false, features = [
    "std",
    "unstable",
    "client",
    "bonsai",
] }
common = { path = "../../common", features = ["original"] }
core = { path = "../../methods/core" }

mock-proof-composition-methods = { path = "../../methods/mock-proof-composition" }
nalgebra = "0.33.2"
garaga_rs = { git = "https://github.com/keep-starknet-strange/garaga.git", branch = "main" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.0.2" }
